--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ body {
 h1,
 h6 {
   color: var(--main-heading);
+  font-weight: bold !important;
 }
 
 p {
